working on elevation gain

--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
   <head>
     <meta charset="utf-8" />
 
-    <title>Lavender and Ropeburn's Super Cool Hiking Calculator</title>
+    <title>Ropeburn's Super Cool Hiking Calculator</title>
     <meta name="description" content="Super Cool Hiking Calculator" />
-    <meta name="author" content="Heather and Chris" />
+    <meta name="author" content="Chris" />
 
     <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
     <header>
-      <h1>Lavender and Ropeburn's Super Cool Hiking Calculator</h1>
+      <h1>Ropeburn's Super Cool Hiking Calculator</h1>
     </header>
     <article>
       <div class="totalMiles">
@@ -25,6 +25,7 @@
           name="totalMiles"
           min="0"
           step=".01"
+          placeholder="enter total trip mileage"
         />
       </div>
       <div class="milesPerHour">
@@ -36,6 +37,7 @@
           name="milesPerHour"
           min="0"
           step=".01"
+          placeholder="estimate your pace"
         />
       </div>
       <div class="hoursPerDay">
@@ -47,6 +49,7 @@
           name="hoursPerDay"
           min="0"
           step=".01"
+          placeholder="hours hiking per day"
         />
       </div>
       <div class="totalElevationGain">
@@ -58,6 +61,7 @@
           name="totalElevationGain"
           min="0"
           step=".01"
+          placeholder="adds .5hr per 1000ft"
         />
       </div>
       <div class="totalDays">
